modified the scrool of the video box so that only the descritpion scrolls + fixed the chat for resonsiveness on mobile

--- a/app/assets/stylesheets/components/_messagechat.scss
+++ b/app/assets/stylesheets/components/_messagechat.scss
@@ -5,7 +5,7 @@
     min-height: 20vh;
     max-height: 76vh;
   }
-  @media (min-width:1025px) {
+  @media (min-width:768px) {
     height: 76vh;
   }
 }
